--- a/jade/publicFacing.jade
+++ b/jade/publicFacing.jade
@@ -1,4 +1,5 @@
 include mixins/metaItems
+include mixins/mobile
 include mixins/googleAnalytics
 
 !!! 5
@@ -7,5 +8,12 @@ html
 		title pageName | siteName
 
 		- facebook = { title : 'title for facebook', description : 'description html for facebook', image:'/path/to/img.jpg'}
+
+		// Meta Items
 		mixin metaItems({ allowIE8 : true, author : 'Isaac Shapira', title : 'page title', description : 'page description', designer : 'Isaac Shapira', copyright : 'some company', facebook : facebook, apple : '/path/to/apple/images', port:'width:1000'})
+		
+		// Mobile
+		mixin mobile({ apple : '/path/to/icons', viewport : 'width:1000' })
+
+		// Google Analytics 
 		mixin googleAnalytics({ code : 'XX-XXXXX-XX', egar : true })
