comingsoon jade sorted out

--- a/jade/publicFacing.jade
+++ b/jade/publicFacing.jade
@@ -18,7 +18,7 @@ html
 		mixin facebook({ title : 'title for facebook', description : 'description html for facebook', image : 'path/to/image.jpg' })
 
 		// Google Analytics 
-		mixin googleAnalytics({ code : 'XX-XXXXX-XX', egar : true })
+		mixin googleAnalytics({ code : 'UA-XXXXX-XX', egar : true })
 
 	body(itemscope='itemscope',itemtype='http://schema.org/WebPage')
 
