--- a/jade/mixins/facebook.jade
+++ b/jade/mixins/facebook.jade
@@ -1,6 +1,6 @@
 //- 	mixin facebook({
-//-			title 		: <title for facebook>
-//-			description : <html description for facebook>
+//-			title 		: <title for facebook>,
+//-			description : <html description for facebook>,
 //- 		image 		: <path to image>
 //-		})
 
