--- a/jade/mixins/metaItems.jade
+++ b/jade/mixins/metaItems.jade
@@ -5,14 +5,7 @@
 //-			title 		: <string>,
 //-			description : <string>,
 //-			designer 	: <string>,
-//-			copyright 	: <string copyright holder's name>,
-//-			facebook	: {
-//-				title 		: <string>
-//-				description	: <html string>
-//-				image 		: <image path>
-//-			},
-//-			apple 		: <image path (directory only)>
-//-			port 		: <viewport content>	
+//-			copyright 	: <string copyright holder's name>
 //-		})
 
 mixin metaItems (options)
